[gd_scene load_steps=17 format=2]

[ext_resource path="res://actors/player/cornbot.png" type="Texture" id=1]
[ext_resource path="res://actors/player/player.gd" type="Script" id=2]
[ext_resource path="res://actors/player/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://actors/player/death.wav" type="AudioStream" id=4]
[ext_resource path="res://actors/player/collect.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 3.5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 16.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2, 3.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 2, 3.5 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.486275, 0.745098, 0.364706, 1 )
hue_variation = -1.0

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 3
emission_point_count = 1
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource( 2 )
speed = Vector2( 32, 64 )
energy_depletion_rate = 0.2
energy_per_corn = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "jump"
playing = true

[node name="CornDetector" type="Area2D" parent="."]
modulate = Color( 0.172549, 1, 0, 1 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CornDetector"]
position = Vector2( 0, 0.5 )
shape = SubResource( 8 )

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 0.5 )
shape = SubResource( 9 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 8 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="CollectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathParticles" type="Particles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 10 )

[node name="WinParticles" type="Particles2D" parent="."]
position = Vector2( 0, -4 )
emitting = false
amount = 25
one_shot = true
explosiveness = 0.9
process_material = SubResource( 11 )

[connection signal="area_entered" from="CornDetector" to="." method="_on_CornDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
